# hinemos-mcp-server

./: .gitignore  HTTP_TRANSPORT.md  QUICK_START_WINDOWS.txt  README.md  WINDOWS_SETUP.md  check_server.py  copy_list.txt  debug_tools.py  hinemos_fastmcp_server.py  hinemos_http_server.py  hinemos_mcp_server.py  mcp_config_template.json  pyproject.toml  requirements.txt  restart_instructions.md  start_fastmcp_server.bat  start_http_server.bat  windows_deployment_package.txt
docs/: README.md  api-reference.md  examples.md  hinemos-rest-client.md  mcp-server-examples.md  mcp-server.md
examples/: monitor_example.py  monitor_example_template.py  new_monitors_example.py  repository_example_template.py
src/hinemos_mcp/: __init__.py  client.py  models.py  monitor.py  monitor_models.py  repository.py
src/hinemos_mcp/server/: __init__.py  fastmcp_server.py  http_fastmcp_server.py  server.py
tests/: README.md  __init__.py  debug_scope_visibility.py  run_all_tests.py  test_facility_tree_api.py  test_final_facility_tree.py  test_high_level_api.py  test_hinemos_connection.py  test_new_monitor_models.py  test_owner_roles.py  test_rest_endpoints.py  test_scope_management.py  verify_scope_implementation.py
